--- a/FoodE/Base.lproj/Main.storyboard
+++ b/FoodE/Base.lproj/Main.storyboard
@@ -289,22 +289,38 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YUH-cP-ntV">
                                 <rect key="frame" x="0.0" y="64" width="375" height="604"/>
                                 <subviews>
-                                    <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="avq-3b-cxN">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="58.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" priority="10" constant="42" id="OzO-1O-759"/>
-                                        </constraints>
-                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
-                                        <scopeButtonTitles>
-                                            <string>Title</string>
-                                            <string>Title</string>
-                                        </scopeButtonTitles>
-                                        <connections>
-                                            <outlet property="delegate" destination="hQG-rP-Dbb" id="ouh-q9-glO"/>
-                                        </connections>
-                                    </searchBar>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WCq-bJ-Qb0">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="42"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIi-rS-A8a">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="42"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="42" id="Rur-Ps-KpV"/>
+                                                    <constraint firstAttribute="width" constant="50" id="avQ-9h-XSe"/>
+                                                </constraints>
+                                                <state key="normal" title="Clear"/>
+                                                <connections>
+                                                    <action selector="clearAction:" destination="hQG-rP-Dbb" eventType="touchUpInside" id="EAB-gN-Dki"/>
+                                                </connections>
+                                            </button>
+                                            <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="avq-3b-cxN">
+                                                <rect key="frame" x="50" y="0.0" width="325" height="42"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" priority="10" constant="42" id="OzO-1O-759"/>
+                                                </constraints>
+                                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                                <scopeButtonTitles>
+                                                    <string>Title</string>
+                                                    <string>Title</string>
+                                                </scopeButtonTitles>
+                                                <connections>
+                                                    <outlet property="delegate" destination="hQG-rP-Dbb" id="ouh-q9-glO"/>
+                                                </connections>
+                                            </searchBar>
+                                        </subviews>
+                                    </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kSk-4r-ttI">
-                                        <rect key="frame" x="0.0" y="58.5" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="42" width="375" height="30"/>
                                         <color key="backgroundColor" red="0.79001376295336789" green="0.79001376295336789" blue="0.79001376295336789" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="1fX-qG-g9p"/>
@@ -314,13 +330,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Photos Stored" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SIX-5U-PQd">
-                                        <rect key="frame" x="0.0" y="88.5" width="375" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="72" width="375" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mbr-zt-vSP">
-                                        <rect key="frame" x="0.0" y="109" width="375" height="450"/>
+                                        <rect key="frame" x="0.0" y="92.5" width="375" height="466.5"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gyp-kB-ZKV">
                                             <size key="itemSize" width="193" height="176"/>
@@ -329,7 +345,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="SLF-Sv-t3x">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="450"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="466.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </activityIndicatorView>
                                         <cells>
@@ -340,14 +356,34 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="193" height="176"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y3x-P5-2fQ">
-                                                            <rect key="frame" x="-6" y="0.0" width="199" height="176"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Ksp-J9-19E">
+                                                            <rect key="frame" x="0.0" y="0.0" width="193" height="176"/>
+                                                            <subviews>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y3x-P5-2fQ">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="193" height="150"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="150" id="5IH-KI-XaD"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7E-3I-57J">
+                                                                    <rect key="frame" x="0.0" y="150" width="193" height="26"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
                                                     </subviews>
                                                 </view>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="Ksp-J9-19E" secondAttribute="trailing" id="CT5-O3-Laa"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Ksp-J9-19E" secondAttribute="bottom" id="Puk-w5-qaC"/>
+                                                    <constraint firstItem="Ksp-J9-19E" firstAttribute="leading" secondItem="bGA-Ws-FXa" secondAttribute="leading" id="QuT-KZ-tuN"/>
+                                                    <constraint firstItem="Ksp-J9-19E" firstAttribute="top" secondItem="bGA-Ws-FXa" secondAttribute="top" id="hv3-oo-64a"/>
+                                                </constraints>
                                                 <connections>
                                                     <outlet property="imageCell" destination="y3x-P5-2fQ" id="m46-Rw-fuk"/>
+                                                    <outlet property="restaurantNameLabel" destination="D7E-3I-57J" id="0yg-o7-Pmd"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
@@ -379,30 +415,21 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DG1-Tb-71p">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="kzH-hi-rY8">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="M3P-jZ-6X2">
-                                <rect key="frame" x="16" y="7" width="83" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Clear"/>
-                                <connections>
-                                    <action selector="clearAction:" destination="hQG-rP-Dbb" eventType="touchUpInside" id="FRk-uQ-qXJ"/>
-                                </connections>
-                            </button>
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="RkH-HY-Dqa">
+                            <connections>
+                                <action selector="editButton:" destination="hQG-rP-Dbb" id="qVd-Ov-QaZ"/>
+                            </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="Q2t-zd-OKM">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Zib-Yc-LsM">
-                                <rect key="frame" x="276" y="7" width="83" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="performSegueToReturnBack" destination="hQG-rP-Dbb" eventType="touchUpInside" id="FWX-m5-LN8"/>
-                                </connections>
-                            </button>
+                        <barButtonItem key="rightBarButtonItem" title="Back" id="XgG-Y1-Efy">
+                            <connections>
+                                <action selector="performSegueToReturnBack" destination="hQG-rP-Dbb" id="fte-mb-AqS"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="mbr-zt-vSP" id="JZb-Jz-bn7"/>
                         <outlet property="downloadIndicator" destination="SLF-Sv-t3x" id="IAH-6h-dlo"/>
+                        <outlet property="editButton" destination="RkH-HY-Dqa" id="lzp-0e-6a3"/>
                         <outlet property="noPhotos" destination="SIX-5U-PQd" id="Hgq-0L-dI0"/>
                         <outlet property="searchBar" destination="avq-3b-cxN" id="L3X-j4-yrg"/>
                         <outlet property="searchTextHeader" destination="kSk-4r-ttI" id="hYo-tt-gTg"/>
@@ -548,7 +575,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Z9E-lf-m3b" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="40H-w1-gv1">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="40H-w1-gv1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -566,7 +593,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SQg-zr-Dco" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uRv-7Q-I1k">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="uRv-7Q-I1k">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -584,7 +611,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ICE-xf-zlk" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LG8-sd-yLh">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="LG8-sd-yLh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -602,7 +629,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vTq-TM-pK5" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="03L-Kh-yXi">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="03L-Kh-yXi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
