--- a/FoodE/Base.lproj/Main.storyboard
+++ b/FoodE/Base.lproj/Main.storyboard
@@ -439,10 +439,10 @@
             </objects>
             <point key="canvasLocation" x="216.80000000000001" y="938.68065967016503"/>
         </scene>
-        <!--My Photo-->
+        <!--My Photo Detail View Controller-->
         <scene sceneID="xMb-iB-UJg">
             <objects>
-                <viewController storyboardIdentifier="MyPhoto" id="XoK-t5-58s" customClass="MyPhoto" customModule="FoodE" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyPhoto" id="XoK-t5-58s" customClass="MyPhotoDetailViewController" customModule="FoodE" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Z6c-lV-Jqx"/>
                         <viewControllerLayoutGuide type="bottom" id="dXq-aX-sMF"/>
@@ -470,12 +470,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MEq-Su-Jww" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1038" y="1639"/>
+            <point key="canvasLocation" x="1037.5999999999999" y="1638.5307346326838"/>
         </scene>
-        <!--Photo View Controller-->
+        <!--My Photo View Controller-->
         <scene sceneID="bCA-Iv-LMp">
             <objects>
-                <viewController id="iR4-FV-DWS" customClass="PhotoViewController" customModule="FoodE" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="iR4-FV-DWS" customClass="MyPhotoViewController" customModule="FoodE" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QX8-Fw-sHH"/>
                         <viewControllerLayoutGuide type="bottom" id="eTb-LU-nXe"/>
@@ -575,7 +575,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Z9E-lf-m3b" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="40H-w1-gv1">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="40H-w1-gv1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -593,7 +593,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SQg-zr-Dco" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uRv-7Q-I1k">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="uRv-7Q-I1k">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -611,7 +611,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ICE-xf-zlk" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LG8-sd-yLh">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="LG8-sd-yLh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
